...
                                <rect key="frame" x="511" y="-7" width="44" height="44.5"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="Dbm-xX-pCN"/>
                                    <constraint firstAttribute="width" secondItem="2eT-s3-NTG" secondAttribute="height" multiplier="1:1" id="tUb-jd-IQJ"/>
                                </constraints>
                                <state key="normal" image="closeWhite"/>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrh-T4-MS5">
                                <rect key="frame" x="30" y="42" width="500" height="127.5"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
